# dockerfile-parser-rs

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  renovate.json  rustfmt.toml  sonar-project.properties
.github/ISSUE_TEMPLATE/: main.yml
.github/workflows/: build.yml  release.yaml  release.yml  sonar.yml
src/: ast.rs  error.rs  file.rs  lib.rs  main.rs  quoter.rs  symbols.rs  utils.rs
src/parser/: mod.rs  options.rs  utils.rs
src/parser/instructions/: add.rs  arg.rs  cmd.rs  copy.rs  entrypoint.rs  env.rs  expose.rs  from.rs  label.rs  mod.rs  run.rs  shell.rs  stopsignal.rs  user.rs  volume.rs  workdir.rs
tests/: Dockerfile  integration.rs
tests/data/: Dockerfile.complex
tests/dockerfiles/complex/: Dockerfile
tests/dockerfiles/simple/: Dockerfile
