[package]
name = "dockerfile-parser-rs"
version = "1.3.0"
authors = ["Michal Šoltis <msoltis1@icloud.com>"]
edition = "2024"
description = "The ultimate Rust library for parsing, modifying, and generating Dockerfiles"
documentation = "https://docs.rs/dockerfile-parser-rs/latest/dockerfile_parser_rs"
readme = "README.md"
repository = "https://github.com/slimreaper35/dockerfile-parser-rs"
license = "MIT"
keywords = ["containers", "docker", "dockerfile", "library", "parser"]

[lib]
doctest = false

[dependencies]
anyhow = "1.0.98"
once_cell = "1.21.3"
regex = "1.11.1"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.20.0"
