# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "dockerfile-parser-rs"
version = "3.2.1"
authors = ["Michal Šoltis <msoltis1@icloud.com>"]
edition = "2024"
description = "The ultimate Rust library for parsing, modifying, and generating Dockerfiles"
documentation = "https://docs.rs/dockerfile-parser-rs/latest/dockerfile_parser_rs"
readme = "README.md"
repository = "https://github.com/slimreaper35/dockerfile-parser-rs"
license = "MIT"
keywords = ["containers", "docker", "dockerfile", "library", "parser"]
categories = ["filesystem", "parsing", "virtualization"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# https://doc.rust-lang.org/clippy/lints.html
[lints.clippy]
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
cargo = "warn"
nursery = "warn"
